# phys-pipeline

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml  status.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: benchmark.yml  bug.yml  epic.yml  feature.yml  physics-test.yml  task.yml
.github/workflows/: add-to-project.yml  adr-index.yml  ci.yml  codex-issue.yml  nightly.yml  project-field-sync.yml  seed-labels.yml  sync-debug.yml
docs/: how-to-build-simulations.md  issue-templates-guide.md  pr-requests.md  v2-migration.md  v2-performance.md  v2-release-notes.md  v2-release-readiness.md  v2-rollout-plan.md
docs/adr/: 0001-test-delete-this.md  0002-sequential-execution.md  0002-stage-config-immutability.md  0003-stage-contract.md  0004-cache-keys.md  0005-artifact-recording.md  0006-provenance-and-namespace.md  0007-stageconfig.md  0008-pipeline-as-stage.md  0009-disk-cache.md  0010-stage-errors.md  0011-policybag.md  0012-testing-strategy.md  0013-adr-process.md  0014-dag-builder.md  0015-dag-scheduler.md  0016-executor-abstraction.md  0017-testing-error-taxonomy.md  0018-dag-execution-semantics.md  0019-cache-backend-options-and-performance-instrumentation.md  0020-redis-cache-backend.md  INDEX.md  _template-amend.md  _template-full.md  _template-lite.md
scripts/: adr_tools.py  benchmarks.py
tests/: conftest.py  test_artifacts.py  test_cache_backends.py  test_dag.py  test_dag_cache_keys.py  test_dag_executor.py  test_dag_integration.py  test_dag_pipeline.py  test_hashing.py  test_hpc.py  test_ml_artifacts.py  test_pipeline_wrapper.py  test_policy.py  test_provenance.py  test_scheduler.py  test_smoke.py  test_sweep.py  test_typing_marker.py  test_v1_compat.py  test_v2_validation.py  test_validation.py  test_version.py
(+18 files in other folders)
